--- a/clustering/server/src/main/resources/org/wildfly/clustering/server/logging/ClusteringServerLogger.i18n_fr.properties
+++ b/clustering/server/src/main/resources/org/wildfly/clustering/server/logging/ClusteringServerLogger.i18n_fr.properties
@@ -15,3 +15,4 @@ registryListenerFailed=Impossible de notifier l'\u00E9couteur de registre %s/%s 
 serviceProviderRegistrationListenerFailed=Impossible de notifier l'\u00E9couteur d'enregistrement du fournisseur de service %s/%s des nouveaux fournisseurs\u00A0\: %s
 noPrimaryElected=Aucun n\u0153ud n'a \u00E9t\u00E9 d\u00E9sign\u00E9 comme fournisseur singleton du service %s
 invalidQuorum=Le quorum %d sp\u00E9cifi\u00E9 doit \u00EAtre sup\u00E9rieur \u00E0 z\u00E9ro
+failedToRestoreLocalRegistryEntry=N'a pas pu restaurer l'entr\u00E9e du registre local  %s/%s suite \u00E0 la fusion de la partition de r\u00E9seau
