--- a/connector/src/main/resources/org/jboss/as/connector/logging/ConnectorLogger.i18n_fr.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/logging/ConnectorLogger.i18n_fr.properties
@@ -152,3 +152,13 @@ boundNonJTADataSource=Source de donn\u00E9es non transactionnelle li\u00E9e\u00A
 unBoundNonJTADataSource=Source de donn\u00E9es non transactionnelle non li\u00E9e\u00A0 \:\u00A0%s
 noSupportedOperation=L'op\u00E9ration %s n'est pas prise en charge
 oneThreadPoolWorkManager=Le pool de threads\u00A0\: %s(type\: %s) ne peut \u00EAtre ajout\u00E9 au workmanager\: %s, un thread pool uniquement est autoris\u00E9 pour chaque type.
+attributeRequiresTrueAttribute=L'attribut %s ne peut pas \u00EAtre d\u00E9fini si %s est sur true
+attributeRequiresFalseOrUndefinedAttribute=L'attribut %s ne peut pas \u00EAtre d\u00E9fini si %s n'est pas d\u00E9fini ou sur false
+Subject=identity\=%s
+subject=Subject\=%s
+elytronHandlerHandle=Elytron handler handle\: %s
+executionSubjectNotSetInHandler=Le sujet d'ex\u00E9cution n'a pas \u00E9t\u00E9 donn\u00E9 au callback handler
+invalidCallbackSecurityDomain=Le callback handler fourni ne contient pas de r\u00E9f\u00E9rence au domaine de s\u00E9curit\u00E9
+unsupportedCreateCallbackHandlerMethod=Vous avez besoin d'un domaine de s\u00E9curit\u00E9 d'un rappel (callback) avec un domaine de s\u00E9curit\u00E9 - utiliser createCallbackHandler(Callback callback) \u00E0 la place
+invalidCredentialSourceSupplier=CredentialSourceSupplier non valide dans DSSecurity
+invalidElytronWorkManagerSetting=WorkManager n'a pas d'indicateur elytron-enabled d\u00E9fini en fonction de celui de RA
