--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/jca/LocalDescriptions_fr.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/jca/LocalDescriptions_fr.properties
@@ -65,6 +65,7 @@ jca.workmanager.name=Le nom du WorkManager
 jca.workmanager.short-running=Le pool de threads pour les jobs de moindre dur\u00E9e
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-connector/org/jboss/as/connector/subsystems/jca/LocalDescriptions, author croe@redhat.com
 jca.workmanager.long-running=Le pool de threads pour les jobs de longue dur\u00E9e
+jca.workmanager.elytron-enabled=Active la s\u00E9curit\u00E9 Elytron pour ce workmanager.
 jca.workmanager.long-running-threads=bool\u00E9en qui indique si le service d'ex\u00E9cution de longue dur\u00E9e est activ\u00E9
 jca.workmanager.short-running-threads=bool\u00E9en qui indique si le service d'ex\u00E9cution de courte dur\u00E9e est activ\u00E9
 jca.distributed-workmanager=WorkManager distribu\u00E9 pour les adaptateurs de ressources
@@ -79,6 +80,7 @@ jca.distributed-workmanager.selector-options=Liste des options cl\u00E9/valeur d
 jca.distributed-workmanager.short-running=Le pool de threads pour les jobs de moindre dur\u00E9e
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-connector/org/jboss/as/connector/subsystems/jca/LocalDescriptions, author croe@redhat.com
 jca.distributed-workmanager.long-running=Le pool de threads pour les jobs de longue dur\u00E9e
+jca.distributed-workmanager.elytron-enabled=Active la s\u00E9curit\u00E9 Elytron pour ce workmanager.
 jca.distributed-workmanager.long-running-threads=bool\u00E9en qui indique si le service d'ex\u00E9cution de longue dur\u00E9e est activ\u00E9
 jca.distributed-workmanager.short-running-threads=bool\u00E9en qui indique si le service d'ex\u00E9cution de courte dur\u00E9e est activ\u00E9
 jca.distributed-workmanager.statistics=Statistiques de WorkManager distribu\u00E9.
