--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions_fr.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions_fr.properties
@@ -37,6 +37,8 @@ resource-adapter.clear-statistics=Supprime les statistiques de cette ressource.
 resource-adapter.transaction-support=Indique le niveau de support de transaction pour l'adaptateur de ressources
 resource-adapter.wm-security=Active/d\u00E9sactive marche/arr\u00EAt pour cet adaptateur de ressources. En cas de false, tous les param\u00E8tres wm - security-* sont ignor\u00E9s, m\u00EAme les valeurs par d\u00E9faut.
 resource-adapter.wm-security-mapping-required=Indique si un mappage est exig\u00E9 pour les identifiants.
+resource-adapter.wm-security-domain=D\u00E9finit le nom du domaine de s\u00E9curit\u00E9 PicketBox devant \u00EAtre utilis\u00E9.
+resource-adapter.wm-elytron-security-domain=D\u00E9finit le nom du domaine de s\u00E9curit\u00E9 Elytron devant \u00EAtre utilis\u00E9
 resource-adapter.wm-security-default-principal=D\u00E9finit le nom principal par d\u00E9faut devant  \u00EAtre ajout\u00E9 \u00E0 l'instance du sujet utilis\u00E9.
 resource-adapter.wm-security-default-group=D\u00E9finit le groupe par d\u00E9faut devant  \u00EAtre ajout\u00E9 \u00E0 l'instance du sujet utilis\u00E9.
 resource-adapter.wm-security-default-groups=D\u00E9finit une liste de groupes par d\u00E9faut devant \u00EAtre ajout\u00E9e \u00E0 l'instance du sujet utilis\u00E9.
@@ -103,11 +105,24 @@ connection-definitions.pool-fair=Indique si l'utilisation du pool de connexions 
 connection-definitions.pool-use-strict-min=Indique si la min-pool-size doit \u00EAtre strictement consid\u00E9r\u00E9e.
 connection-definitions.query-timeout=Tout d\u00E9lai d'attente de requ\u00EAte configur\u00E9 en secondes.
 connection-definitions.recovery-password=Le mot de passe utilis\u00E9 pour le recouvrement
+connection-definitions.recovery-credential-reference=Identifiants (du Store d'identifiants) pour authentifier lors de la connexion de recouvrement
+connection-definitions.recovery-credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+connection-definitions.recovery-credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+connection-definitions.recovery-credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+connection-definitions.recovery-credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 connection-definitions.recovery-plugin-class-name=Le nom de classe complet pour l'impl\u00E9mentation du plugin de recouvrement
 connection-definitions.recovery-plugin-properties=Les propri\u00E9t\u00E9s du plugin de recouvrement
+connection-definitions.recovery-security-domain=Le domaine de s\u00E9curit\u00E9 PicketBox pour le recouvrement
+connection-definitions.recovery-elytron-enabled=Indique qu'un contexte d'authentification Elytron sera utilis\u00E9 pour le recouvrement.
+connection-definitions.recovery-authentication-context=Le contexte d'authentification Elytron utilis\u00E9 pour le recouvrement (le contexte d'authentification actuel sera utilis\u00E9 si non sp\u00E9cifi\u00E9).
 connection-definitions.recovery-username=Le nom de l'utilisateur pour le recouvrement
 connection-definitions.same-rm-override=En utilisant cet attribut, vous pouvez d\u00E9finir inconditionnellement si le javax.transaction.xa.XAResource.isSameRM(XAResource) retourne true ou false.
 connection-definitions.security-application=Indique que des param\u00E9tres fournis d'application (comme ceux de getConnection(user, pw)) sont utilis\u00E9s pour distinguer les connexions du pool.
+connection-definitions.security-domain=Indique le domaine de s\u00E9curit\u00E9 PicketBox qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions dans le pool.
+connection-definitions.security-domain-and-application=Indique que soit les param\u00E8tres fournis d'application, comme ceux de getConnection(user, pw) ou que le Sujet (en provenance du domaine de s\u00E9curit\u00E9 PicketBox) sont utilis\u00E9s pour distinguer les connexions du pool.
+connection-definitions.elytron-enabled=Permet \u00E0 la s\u00E9curit\u00E9 Elytron de g\u00E9rer l'authentification des connexions. Le contexte d'authentification Elytron \u00E0 utiliser correspondra au contexte actuel si aucun contexte n'est sp\u00E9cifi\u00E9 (voir authentification-context).
+connection-definitions.authentication-context=Le contexte d'authentification Elytron qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions du pool.
+connection-definitions.authentication-context-and-application=Indique que soit les param\u00E8tres fournis d'application, comme ceux de getConnection(user, pw) ou que le Sujet (fourni par Elytron apr\u00E8s l'authentification en utilisant l'authentification-context configur\u00E9) sont utilis\u00E9s pour distinguer les connexions du pool.
 connection-definitions.set-tx-query-timeout=Si on d\u00E9finit le d\u00E9lai d'attente de requ\u00EAte sur le temps qui reste jusqu'\u00E0 ce que la transaction soit \u00E9chue. Tout d\u00E9lai d'attente de requ\u00EAte configur\u00E9 sera utilis\u00E9 s'il n'y a pas de transaction.
 connection-definitions.test-connection-in-pool=Teste si une connexion peut \u00EAtre obtenue
 connection-definitions.use-ccm=Active l'utilisation d'un gestionnaire de connexionx en cache
