--- a/ee/src/main/resources/org/jboss/as/ee/logging/EeLogger.i18n_fr.properties
+++ b/ee/src/main/resources/org/jboss/as/ee/logging/EeLogger.i18n_fr.properties
@@ -192,3 +192,4 @@ failedToRunTask=N'a pas pu ex\u00E9cuter la t\u00E2che programm\u00E9e
 cannotRunScheduledTask=N'a pas pu ex\u00E9cuter la t\u00E2che %s programm\u00E9e car le conteneur est en attente
 invalidCoreThreadsSize=La valeur des core-threads doit \u00EAtre sup\u00E9rieure \u00E0 0 quand la longueur de la file d'attente est %s
 invalidMaxThreads=La valeur maximum des threads %d doit \u00EAtre inf\u00E9rieure \u00E0 la valeur %d des core-threads.
+classDoesNotImplementAllInterfaces=La classe n'impl\u00E9mente pas toutes les interfaces fournies
