--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions_fr.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions_fr.properties
@@ -67,6 +67,11 @@ bridge.check-period=La dur\u00E9e (en millisecondes) entre les contr\u00F4les d'
 bridge.confirmation-window-size=La confirmation de taille de fen\u00EAtre \u00E0 utiliser pour la connexion qui sert \u00E0 transf\u00E9rer des messages vers le n\u0153ud cible.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 bridge.connection-ttl=La dur\u00E9e maximum (en millisecondes) pendant laquelle les connexions utilis\u00E9es par les ponts sont consid\u00E9r\u00E9es vivantes (en l'absence de pulsations).
+bridge.credential-reference=Identifiants (du Store d'identifiants) pour authentifier le pont
+bridge.credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+bridge.credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+bridge.credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+bridge.credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 bridge.discovery-group=Le nom du groupe Discovery utilis\u00E9 par ce pont. Doit \u00EAtre non d\u00E9fini (null) si les 'static-connectors' sont d\u00E9finis.
 bridge.failover-on-server-shutdown.deprecated=D\u00E9pr\u00E9ci\u00E9. N'a pas d'effet de runtime et un avertissement doit \u00EAtre issu si on tente de d\u00E9finir une valeur \u00E0 cet attribut.
@@ -444,6 +449,11 @@ server.close-consumer-connections-for-address.address-match=Une adresse ActiveMQ
 server.cluster-password=Le mot de passe utilis\u00E9 par les connexions du cluster pour communiquer entre les n\u0153uds clusteris\u00E9s.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 server.cluster-user=L'utilisateur utilis\u00E9 par les connexions du cluster pour communiquer entre les n\u0153uds de cluster.
+server.cluster-credential-reference=Identifiants (du Store d'identifiants) pour authentifier le cluster
+server.cluster-credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+server.cluster-credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+server.cluster-credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+server.cluster-credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 server.clustered.deprecated=Pour cr\u00E9er un serveur ActiveMQ clusteris\u00E9, d\u00E9finir une connexion-cluster au moins.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 server.clustered=Si le serveur est clusteris\u00E9.
@@ -525,6 +535,7 @@ server.journal-max-io=Le nombre maximum de demandes d'\u00E9critures qui peuvent
 server.journal-messages-table=Nom du tableau JDBC o\u00F9 les messages sont stock\u00E9s.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 server.journal-min-files=Combien de fichiers de journaux faut-il pr\u00E9-cr\u00E9er ?
+server.journal-page-store-table=Nom du tableau JDBC o\u00F9 les pages sont stock\u00E9es.
 server.journal-pool-files=Le nombre de fichiers journaux pouvant \u00EAtre r\u00E9utilis\u00E9s. ActiveMQ cr\u00E9era autant de fichiers qu'il est n\u00E9cessaire, mais, quand il r\u00E9clamera des fichiers, il retournera \u00E0 la valeur (-1 \u00E9quivaut \u00E0 \u00AB\u00A0aucune limite\u00A0\u00BB).
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 server.journal-sync-non-transactional=Si on doit attendre que les donn\u00E9es de non transaction soient synchronis\u00E9es dans le journal avant de renvoyer une r\u00E9ponse au client.
@@ -720,6 +731,11 @@ jms-bridge.source-context=Les propri\u00E9t\u00E9s utilis\u00E9es pour configure
 jms-bridge.source-destination=Le nom de la destination source \u00E0 rechercher sur le serveur de messagerie source.
 jms-bridge.source-password=Le mot de passe pour cr\u00E9er une connexion source.
 jms-bridge.source-user=Le nom d'utilisateur pour cr\u00E9er une connexion source.
+jms-bridge.source-credential-reference=Identifiants (du Store d'identifiants) pour authentifier la connexion source
+jms-bridge.source-credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+jms-bridge.source-credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+jms-bridge.source-credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+jms-bridge.source-credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 jms-bridge.start=D\u00E9marre le pont JMS.
 jms-bridge.started=Indique si le pont JMS a d\u00E9marr\u00E9.
 jms-bridge.stop=Arr\u00EAte le pont JMS.
@@ -729,6 +745,11 @@ jms-bridge.target-context=Les propri\u00E9t\u00E9s utilis\u00E9es pour configure
 jms-bridge.target-destination=Le nom de la destination cible \u00E0 rechercher sur le serveur de messagerie cible.
 jms-bridge.target-password=Le mot de passe pour cr\u00E9er une connexion cible.
 jms-bridge.target-user=Le nom d'utilisateur pour cr\u00E9er une connexion cible.
+jms-bridge.target-credential-reference=Identifiants (du Store d'identifiants) pour authentifier la connexion cible
+jms-bridge.target-credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+jms-bridge.target-credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+jms-bridge.target-credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+jms-bridge.target-credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 jms-bridge=Une instance de pontage JMS.
 jms-queue.add-jndi.jndi-binding=Liaison JNDI
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
