--- a/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/logging/JGroupsLogger.i18n_fr.properties
+++ b/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/logging/JGroupsLogger.i18n_fr.properties
@@ -24,3 +24,8 @@ privilegedAccessExceptionForAttribute=Exception d'acc\u00E8s privil\u00E9gi\u00E
 instantiationExceptionOnConverterForAttribute=Exception d'instanciation de convertisseur pour l'attribut/m\u00E9thode %s 
 unableToLoadProtocol=Impossible de charger la classe de protocole %s
 threadsAttributesUsedInRuntime=Attributs r\u00E9f\u00E9ren\u00E7ant le sous-syst\u00E8me de threads ne peut \u00EAtre utilis\u00E9 que pour supporter les autres esclaves du domaine.
+keyEntryNotFound=%s entr\u00E9e non trouv\u00E9e dans le key store configur\u00E9
+privateKeyStoreEntryExpected=%s entr\u00E9e key store ne contient pas de cl\u00E9 priv\u00E9e
+secretKeyStoreEntryExpected=%s entr\u00E9e key store ne contient pas de cl\u00E9 secr\u00E8te
+unexpectedCredentialSource=Identifiants configur\u00E9s ne r\u00E9f\u00E9ren\u00E7ant pas de mot de passe identifiant en texte clair
+operationNotDefined=Aucune op\u00E9ration %s enregistr\u00E9e \u00E0 %s
