--- a/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/subsystem/LocalDescriptions_fr.properties
+++ b/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/subsystem/LocalDescriptions_fr.properties
@@ -108,8 +108,16 @@ jgroups.protocol.type=La classe d'impl\u00E9mentation pour un protocole, qui d\u
 jgroups.protocol.type.deprecated=D\u00E9pr\u00E9ci\u00E9. Sera supprim\u00E9 dans une prochaine version.
 jgroups.protocol.module=Le module avec lequel r\u00E9soudre le type de protocole.
 jgroups.protocol.socket-binding=La sp\u00E9cification de liaison de socket pour cette couche de protocole, utilis\u00E9e pour indiquer les interfaces d'IP et les ports de communication.
+jgroups.protocol.socket-binding.deprecated=D\u00E9pr\u00E9ci\u00E9. Supporte les esclaves EAP 7.0.
 jgroups.protocol.properties=Les propri\u00E9t\u00E9s de ce protocole.
 jgroups.protocol.property=Propri\u00E9t\u00E9 de protocole JGroups.
+jgroups.protocol.key-alias=L'alias de la cl\u00E9 d'encodage d'un key store sp\u00E9cifique
+jgroups.protocol.key-store=Une r\u00E9f\u00E9rence \u00E0 un key store contenant la cl\u00E9 d'encodage
+jgroups.protocol.credential-reference=Les identifiants requis pour obtenir une cl\u00E9 d'encodage du key store.
+jgroups.protocol.credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant.
+jgroups.protocol.credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store.  
+jgroups.protocol.credential-reference.type=Le type d'identifiant que cette r\u00E9f\u00E9rence d\u00E9note.
+jgroups.protocol.credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair. V\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services.
 jgroups.property=Une propri\u00E9t\u00E9 de protocole avec un nom et une valeur.
 jgroups.property.deprecated=D\u00E9pr\u00E9ci\u00E9. Les propri\u00E9t\u00E9s du protocole sont d\u00E9finies via l'attribut "propri\u00E9t\u00E9s" de la ressource parente.
 jgroups.property.add=Ajoute une propri\u00E9t\u00E9 de protocole.
