--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions_fr.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions_fr.properties
@@ -87,6 +87,11 @@ datasources.data-source.capacity-incrementer-class=Classe d\u00E9finissant la st
 datasources.data-source.capacity-incrementer-properties=Propri\u00E9t\u00E9s \u00E0 injecter dans la classe d\u00E9finissant la strat\u00E9gie d'incr\u00E9mentation de connexions dans le pool de connexions.
 datasources.data-source.capacity-decrementer-class=Classe d\u00E9finissant la strat\u00E9gie de d\u00E9cr\u00E9mentation des connexions dans le pool de connexions
 datasources.data-source.capacity-decrementer-properties=Propri\u00E9t\u00E9s \u00E0 injecter dans la classe d\u00E9finissant la strat\u00E9gie de d\u00E9cr\u00E9mentation de connexions dans le pool.
+datasources.data-source.credential-reference=Identifiants (du Store d'identifiants) pour authentifier sur la source des donn\u00E9es
+datasources.data-source.credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+datasources.data-source.credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+datasources.data-source.credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+datasources.data-source.credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 datasources.data-source.new-connection-sql=Indique un \u00E9nonc\u00E9 SQL \u00E0 ex\u00E9cuter quand une connexion est ajout\u00E9e au pool de connexions
 datasources.data-source.no-tx-separate-pool=Oracle n'aime pas que les connexions XA soient utilis\u00E9es \u00E0 l'int\u00E9rieur et \u00E0 l'ext\u00E9rieur d'une transaction JTA. Pour r\u00E9soudre ce probl\u00E8me, vous pouvez cr\u00E9er des sous-pools s\u00E9par\u00E9s pour des contextes diff\u00E9rents.
 datasources.data-source.pad-xid=Est-ce que le Xid doit \u00EAtre rempli
@@ -100,6 +105,9 @@ datasources.data-source.property-name=Le nom de la propri\u00E9t\u00E9
 datasources.data-source.property-value=La valeur de la propri\u00E9t\u00E9
 datasources.data-source.query-timeout=Tout d\u00E9lai d'attente de requ\u00EAte configur\u00E9 en secondes. Si non fourni, aucun d\u00E9lai d'attente ne sera d\u00E9fini.
 datasources.data-source.same-rm-override=L'\u00E9l\u00E9ment in-same-rm-override permet de d\u00E9finir inconditionnellement si le javax.transaction.xa.XAResource.isSameRM(XAResource) retourne true ou false
+datasources.data-source.security-domain=Indique le domaine de s\u00E9curit\u00E9 PicketBox qui d\u00E9finit le PicketBox javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions dans le pool de connexions.
+datasources.data-source.elytron-enabled=Permet \u00E0 la s\u00E9curit\u00E9 Elytron de g\u00E9rer l'authentification des connexions. Le contexte d'authentification Elytron \u00E0 utiliser correspondra au contexte actuel si aucun contexte n'est sp\u00E9cifi\u00E9 (voir authentification-context).
+datasources.data-source.authentication-context=Le contexte d'authentification Elytron qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions du pool.
 datasources.data-source.set-tx-query-timeout=Indique si on d\u00E9finit le d\u00E9lai d'attente de requ\u00EAte sur le temps qui reste jusqu'\u00E0 ce que la transaction soit elaps\u00E9e. Tout d\u00E9lai d'attente de requ\u00EAte configur\u00E9 sera utilis\u00E9 s'il n'y a pas de transaction.
 datasources.data-source.share-prepared-statements=Indique si on doit partager les \u00E9nonc\u00E9s pr\u00E9par\u00E9s, c-a-d si on doit demander un m\u00EAme \u00E9nonc\u00E9 \u00E0 deux reprises sans fermeture, utilise le m\u00EAme \u00E9nonc\u00E9 sous-jacent pr\u00E9par\u00E9.
 datasources.data-source.spy=Active la surveillance des \u00E9nonc\u00E9s SQL
@@ -143,6 +151,14 @@ datasources.data-source.mcp=D\u00E9finit l'impl\u00E9mentation ManagedConnection
 datasources.data-source.enlistment-trace=Indique si WildFly/IronJacamar doit enregistrer les traces de suivi d'inscription
 datasources.data-source.recovery-username=Le nom de l'utilisateur pour le recouvrement
 datasources.data-source.recovery-password=Le mot de passe utilis\u00E9 pour le recouvrement
+datasources.data-source.recovery-security-domain=Le domaine de s\u00E9curit\u00E9 utilis\u00E9 pour le recouvrement, pour les domaines de s\u00E9curit\u00E9 PickeBox
+datasources.data-source.recovery-elytron-enabled=Autorise la s\u00E9curit\u00E9 Elytron \u00E0 g\u00E9rer l'authentification des connexions pour le recouvrement. Le contexte d'authentification d'Elytron \u00E0 utiliser sera le contexte actuel si aucun contexte n'est sp\u00E9cifi\u00E9 (voir authentification-context)
+datasources.data-source.recovery-credential-reference=Identifiants (du Store d'identifiants) pour authentifier sur la source des donn\u00E9es
+datasources.data-source.recovery-credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+datasources.data-source.recovery-credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+datasources.data-source.recovery-credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+datasources.data-source.recovery-credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
+datasources.data-source.recovery-authentication-context=Le contexte d'authentification Elytron qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions du pool.
 datasources.data-source.recovery-plugin-properties.recovery-plugin-class-name=Le nom de classe complet pour l'impl\u00E9mentation du plugin de recouvrement
 datasources.data-source.recovery-plugin-class-name=Le nom de classe complet pour l'impl\u00E9mentation du plugin de recouvrement
 datasources.data-source.recovery-plugin-properties=Les propri\u00E9t\u00E9s du plugin de recouvrement
@@ -179,6 +195,11 @@ datasources.xa-data-source.capacity-incrementer-class=Classe d\u00E9finissant la
 datasources.xa-data-source.capacity-incrementer-properties=Propri\u00E9t\u00E9s \u00E0 injecter dans la classe d\u00E9finissant la strat\u00E9gie d'incr\u00E9mentation de connexions dans le pool de connexions.
 datasources.xa-data-source.capacity-decrementer-class=Classe d\u00E9finissant la strat\u00E9gie de d\u00E9cr\u00E9mentation des connexions dans le pool de connexions
 datasources.xa-data-source.capacity-decrementer-properties=Propri\u00E9t\u00E9s \u00E0 injecter dans la classe d\u00E9finissant la strat\u00E9gie de d\u00E9cr\u00E9mentation de connexions dans le pool de connexions.
+datasources.xa-data-source.credential-reference=Identifiants (du Store d'identifiants) pour authentifier sur la source des donn\u00E9es
+datasources.xa-data-source.credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+datasources.xa-data-source.credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+datasources.xa-data-source.credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+datasources.xa-data-source.credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
 datasources.xa-data-source.new-connection-sql=Indique un \u00E9nonc\u00E9 SQL \u00E0 ex\u00E9cuter quand une connexion est ajout\u00E9e au pool de connexions
 datasources.xa-data-source.no-tx-separate-pool=Oracle n'aime pas que les connexions XA soient utilis\u00E9es \u00E0 l'int\u00E9rieur et \u00E0 l'ext\u00E9rieur d'une transaction JTA. Pour r\u00E9soudre ce probl\u00E8me, vous pouvez cr\u00E9er des sous-pools s\u00E9par\u00E9s pour des contextes diff\u00E9rents.
 datasources.xa-data-source.pad-xid=Est-ce que le Xid doit \u00EAtre rempli
@@ -192,6 +213,9 @@ datasources.xa-data-source.property-name=Le nom de la propri\u00E9t\u00E9
 datasources.xa-data-source.property-value=La valeur de la propri\u00E9t\u00E9
 datasources.xa-data-source.query-timeout=Tout d\u00E9lai d'attente de requ\u00EAte configur\u00E9 en secondes. Si non fourni, aucun d\u00E9lai d'attente ne sera d\u00E9fini.
 datasources.xa-data-source.same-rm-override=L'\u00E9l\u00E9ment in-same-rm-override permet de d\u00E9finir inconditionnellement si le javax.transaction.xa.XAResource.isSameRM(XAResource) retourne true ou false
+datasources.xa-data-source.security-domain=Indique le domaine de s\u00E9curit\u00E9 PicketBox qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions dans le pool de connexions.
+datasources.xa-data-source.elytron-enabled=Autorise la s\u00E9curit\u00E9 Elytron \u00E0 g\u00E9rer l'authentification des connexions pour le recouvrement. Le contexte d'authentification d'Elytron \u00E0 utiliser sera le contexte actuel si aucun contexte n'est sp\u00E9cifi\u00E9 (voir authentification-context)
+datasources.xa-data-source.authentication-context=Le contexte d'authentification Elytron qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions du pool.
 datasources.xa-data-source.set-tx-query-timeout=Si on d\u00E9finit le d\u00E9lai d'attente de requ\u00EAte sur le temps qui reste jusqu'\u00E0 ce que la transaction soit elaps\u00E9e. Tout d\u00E9lai d'attente de requ\u00EAte configur\u00E9 sera utilis\u00E9 s'il n'y a pas de transaction.
 datasources.xa-data-source.share-prepared-statements=Si on doit partager les \u00E9nonc\u00E9s pr\u00E9par\u00E9s, c-a-d si on doit demander un m\u00EAme \u00E9nonc\u00E9 \u00E0 deux reprises sans fermeture, utilise le m\u00EAme \u00E9nonc\u00E9 sous-jacent pr\u00E9par\u00E9.
 datasources.xa-data-source.spy=Active la surveillance des \u00E9nonc\u00E9s SQL
@@ -240,6 +264,13 @@ datasources.xa-data-source.enlistment-trace=Indique si WildFly/IronJacamar doit 
 datasources.xa-data-source.recovery-username=Le nom de l'utilisateur pour le recouvrement
 datasources.xa-data-source.recovery-password=Le mot de passe utilis\u00E9 pour le recouvrement
 datasources.xa-data-source.recovery-security-domain=Le domaine de s\u00E9curit\u00E9 pour le recouvrement
+datasources.xa-data-source.recovery-elytron-enabled=Autorise la s\u00E9curit\u00E9 Elytron \u00E0 g\u00E9rer l'authentification des connexions pour le recouvrement. Le contexte d'authentification d'Elytron \u00E0 utiliser sera le contexte actuel si aucun contexte n'est sp\u00E9cifi\u00E9 (voir authentification-context)
+datasources.xa-data-source.recovery-credential-reference=Identifiants (du Store d'identifiants) pour authentifier sur la source des donn\u00E9es
+datasources.xa-data-source.recovery-credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+datasources.xa-data-source.recovery-credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+datasources.xa-data-source.recovery-credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+datasources.xa-data-source.recovery-credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
+datasources.xa-data-source.recovery-authentication-context=Le contexte d'authentification Elytron qui d\u00E9finit le javax.security.auth.Subject utilis\u00E9 pour distinguer les connexions du pool.
 datasources.xa-data-source.recovery-plugin-properties.recovery-plugin-class-name=Le nom de classe complet pour l'impl\u00E9mentation du plugin de recouvrement
 datasources.xa-data-source.recovery-plugin-class-name=Le nom de classe complet pour l'impl\u00E9mentation du plugin de recouvrement
 datasources.xa-data-source.recovery-plugin-properties=Les propri\u00E9t\u00E9s du plugin de recouvrement
