--- a/ejb3/src/main/resources/org/jboss/as/ejb3/logging/EjbLogger.i18n_fr.properties
+++ b/ejb3/src/main/resources/org/jboss/as/ejb3/logging/EjbLogger.i18n_fr.properties
@@ -81,7 +81,8 @@ logMDBStart=D\u00E9marrage du bean bas\u00E9 message \u00AB\u00A0%s\u00A0\u00BB 
 skipOverlappingInvokeTimeout=Une ancienne ex\u00E9cution de la minuterie %s est toujours active, \u00E9vitement du chevauchement d'ex\u00E9cution pr\u00E9vu \u00E0 \: %s
 resourceAdapterRepositoryUnAvailable=Le r\u00E9f\u00E9rentiel d'adaptateur de ressources n'est pas disponible
 noSuchEndpointException=Impossible de trouver un Point de terminaison pour l'adaptateur de ressources %s
-endpointUnAvailable=Le point de terminaison n'est pas disponible pour le message bas\u00E9 composant %s
+endpointUnAvailable=Le point de terminaison n'est pas disponible pour le composant bas\u00E9 message %s
+failureDuringEndpointDeactivation=N'a pas pu d\u00E9sactiver le point de terminaison pour le composant bas\u00E9 message %s
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-ejb3/org/jboss/as/ejb3/EjbLogger.i18n, author grossetieg
 unsupportedCallback=\ 
 failureDuringLoadOfClusterNodeSelector=N'a pas pu cr\u00E9er une instance de s\u00E9lecteur de noeud de cluster %s pour le cluster %s
@@ -91,6 +92,8 @@ viewNotFound=N'a pas pu trouver la vue %s pour EJB %s
 asyncInvocationOnlyApplicableForSessionBeans=Impossible d'ex\u00E9cuter une invocation locale asynchrone pour un composant qui ne correspond pas \u00E0 une session bean
 notStatefulSessionBean=%s n'est pas un bean Stateful Session dans l'app\: %s module\: %s distinct-name\: %s
 failedToMarshalEjbParameters=N'a pas pu marshaler les param\u00E8tres EJB
+unknownDeployment=Pas de d\u00E9ploiement correspondant pour EJB\u00A0\: %s
+ejbNotFoundInDeployment=N'a pas pu trouver EJB dans le d\u00E9ploiement correspondant \: %s
 annotationApplicableOnlyForMethods=L'annotation %s n'est valide que sur les cibles de m\u00E9thode
 aroundTimeoutMethodExpectedWithInvocationContextParam=M\u00E9thode %s, sur la classe %s, annot\u00E9e par @javax.interceptor.AroundTimeout devrait pouvoir accepter un param\u00E8tre simple de type javax.interceptor.InvocationContext
 aroundTimeoutMethodMustReturnObjectType=La m\u00E9thode %s, sur la classe %s, annot\u00E9e par @javax.interceptor.AroundTimeout doit renvoyer un type Objet
@@ -186,6 +189,7 @@ cannotDeactivateBeanServant=N'a pas pu d\u00E9sactiver le Bean Servant
 exceptionOnChannel=Exception sur canal %s en provenance du message %s
 errorInvokingMethod=Erreur lors de l'invocation de la m\u00E9thode %s sur le bean nomm\u00E9 %s pour appname %s modulename %s distinctname %s
 couldNotWriteMethodInvocation=N'a pas pu \u00E9crire l'erreur d'invocation de m\u00E9thode pour la m\u00E9thode %s sur le bean nomm\u00E9 %s pour appname %s modulename %s distinctname %s en raison de
+exceptionGeneratingSessionId=Exception lors de la cr\u00E9ation de l'id de session pour le composant %s ayant comme id d'invocation %s
 couldNotWriteOutToChannel=N'a pas pu \u00E9crire de message sur le canal pour la raison suivante 
 couldNotWriteInvocationSuccessMessage=N'a pas pu \u00E9crire de message d'invocation r\u00E9ussie sur le canal pour la raison suivante 
 unsupportedMessageHeader=A re\u00E7u un en-t\u00EAte de message non pris en charge 0x%x sur r\u00E9seau %s
@@ -778,3 +782,8 @@ invalidTransactionTypeForMDB=Le type de transaction %s n'est pas sp\u00E9cifi\u0
 remappingCacheAttributes=Le param\u00E8tre \u00AB par default-cluster-sfsb-cache \u00BB a \u00E9t\u00E9 d\u00E9fini pour l'op\u00E9ration \u00AB ajouter \u00BB pour la ressource \u00AB %s \u00BB. Ce param\u00E8tre est d\u00E9pr\u00E9ci\u00E9 et son comportement pr\u00E9c\u00E9dent a \u00E9t\u00E9 reconfigur\u00E9 en attribut \u00AB par default-sfsb-cache \u00BB. Ainsi, l'attribut \u00AB par default-sfsb-cache \u00BB a \u00E9t\u00E9 d\u00E9fini \u00E0 \u00AB\u00A0%s\u00A0\u00BB et l'attribut \u00AB default-sfsb-passivation-disabled-cache \u00BB a \u00E9t\u00E9 d\u00E9fini \u00E0 \u00AB\u00A0%s\u00A0\u00BB.
 unexpectedInvocationState=\u00C9tat d'invocation %s non attendu
 ejbAuthenticationRequired=Acc\u00E8s non authentifi\u00E9  (anonyme) \u00E0 cette m\u00E9thode EJB non autoris\u00E9
+timerNotRunning=Le minuteur %s n'est pas en cours d'ex\u00E9cution car la transaction n'a pas pu d\u00E9marrer
+multipleSecurityDomainsDetected=Domaines de s\u00E9curit\u00E9 multiples non pris en charge
+cannotBeginUserTransaction=Le d\u00E9but de la requ\u00EAte de transaction a \u00E9t\u00E9 rejet\u00E9e car le conteneur est en attente
+suspensionWaitingActiveTransactions=Suspension du sous-syst\u00E8me EJB en attente de transactions actives, %d transaction(s) restantes
+suspensionComplete=Suspension du sous-syst\u00E8me EJB termin\u00E9e
